--- a/assets/css/menu/menu-link.css
+++ b/assets/css/menu/menu-link.css
@@ -5,9 +5,13 @@
     text-transform: lowercase;
 }
 
-.menu__link.ativo {
-    color: #333;
+.menu__link--ativo {
+    color: #333333;
     font-weight: bold;
+}
+
+.menu__link:last-child {
+    margin-right: none;
 }
 
 .menu__link:hover {
