--- a/assets/css/rodape.css
+++ b/assets/css/rodape.css
@@ -6,7 +6,13 @@
     text-transform: lowercase;
 }
 
-.rodape a {
-    text-decoration: none;
-    color: #fdfdfd;
+@media screen and (min-width: 0) {
+    .rodape {
+        font-size: 1.125rem;
+    }
+}
+@media screen and (min-width: 768px) {
+    .rodape {
+        font-size: 2rem;
+    }
 }
